fixing minor alignmnet problems in the header when there is no featured image

--- a/assets/sass/components/_body.scss
+++ b/assets/sass/components/_body.scss
@@ -113,6 +113,7 @@ html body {
 				font-family: $ssp;
 				font-weight: bold;
 				text-transform: uppercase;
+				position: relative;
 			}
 
 		}
